--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,3 +66,16 @@
     footer a {
         color: #024e76;
     }
+
+    section {
+        padding: 60px;
+    }
+
+    /* Hero Style Start */
+    .hero {
+        background-image: url("../images/hero-bg.jpg");
+        height: 600px;
+        background-size: cover;
+        background-position: center;
+    }
+    /* Hero Style End */
