--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,8 +77,8 @@
         height: 600px;
         background-size: cover;
         background-position: center;
+        position: relative;
     }
-    /* Hero Style End */
 
     .hero-form {
         border: solid 3px #024e76;
@@ -87,6 +87,38 @@
         width: 500px;
         color: #024e76;
         position: absolute;
-        bottom: 0px;
-        right: 0px;        
+        bottom: 120px;
+        right: 140px;        
     }
+
+    .hero-form h3 {
+        font-size: 24px;
+        margin: 0;
+    }
+
+    .hero-form p {
+        margin: 5px 0 15px 0;
+    }
+    
+    .form-input {
+        border: 1px solid #024e76;
+        display: block;
+        padding: 7px 15px;
+        font-size: 16px;
+        color: #024e76;
+        width: 100%;
+        margin-bottom: 15px;
+    }
+
+    .hero-form label {
+        margin: 0 5px;
+    }
+
+    .hero-form button {
+        color: #fce138;
+        background-color: #024e76;
+        border: none;
+        padding: 10px 20px;
+        font-size: 16px;
+    }
+    /* hero styles end */
