--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
     font-family: Helvetica, Arial, Sans-serif;
     }
 
-    /* apply styles to <header> */
+    /* start styles to header */
     header {
         padding: 20px 35px;
         background-color: #39a6b2;
@@ -43,7 +43,9 @@
         font-weight: lighter;
         font-size: 22px;
     }
+    /* end styles to header */
 
+    /* start styles to footer */
     footer {
         background: #fce138;
         width: 100%;
@@ -66,10 +68,30 @@
     footer a {
         color: #024e76;
     }
+    /* end styles to footer */
 
+    /* start styles to section */
     section {
         padding: 60px;
     }
+    
+    .section-title {
+        font-size: 55px;
+        color: #024e76;
+        margin-bottom: 35px;
+        padding: 0 100px 20px 100px;
+        display: inline-block;
+        border-bottom: 3px solid;
+    }
+    
+    .primary-border {
+        border-color: #fce138;
+    }
+
+    .secondary-border {
+        border-color: #39a6b2;
+    }
+    /* end styles to section */
 
     /* Hero Style Start */
     .hero {
@@ -123,21 +145,10 @@
     }
     /* hero styles end */
 
-    /* what we do sction */
+    /* start what we do sction */
     .intro {
         text-align: center;
     }
-
-    .intro h2 {
-        font-size: 55px;
-        color: #024e76;
-        margin-bottom: 35px;
-        padding: 0 100px 20px 100px;
-        border-bottom: 3px solid;
-        border-color: #fce138;
-        display: inline-block;
-    }
-
     .intro p {
         line-height: 1.7;
         color: #39a6b2;
@@ -145,4 +156,29 @@
         font-size: 20px;
         margin: 0 auto;
     }
+    /* end what we do section */
 
+    /* start what you do section */
+    .steps {
+        text-align: center;
+        background: #fce138;
+    }
+
+    .steps div {
+        margin-bottom: 80px;
+    }
+
+    .steps img {
+        color: #024e76;
+        font-size: 46px;
+        margin-top: 10px;
+    }
+    
+    .steps p {
+        color: #39a6b2;
+        font-size: 23px;
+    }
+
+    .steps span {
+        font-size: 38px;
+    }
