--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,3 +233,29 @@
         font-size: 17px;
         line-height: 1.3;
     }
+    /* end trainers section */
+
+    /* start reach out section */
+    .contact {
+        background: #024e76;
+        text-align: center;
+    }
+
+    .contact h2 {
+        color: #fce138;
+        border-bottom: 3px solid #39a6b2;
+    }
+
+    .contact-info iframe {
+        width: 400px;
+        height: 400px;
+    }
+
+    .contact-info div {
+        width: 410px;
+        display: inline-block;
+        vertical-align: top;
+        text-align: left;
+        margin: 30px 0 0 60px;
+        color: white;
+    }
