--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,9 @@
     /* start trainers section */
     .trainers {
         text-align: center;
+    }
+    
+    .trainer {
         width: 900px;
         margin: 0 auto 30px auto;
         background: #024e76;
