add content to hero, replace image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@
 
     /* Hero Style Start */
     .hero {
-        background-image: url("../images/hero-bg.jpg");
+        background-image: url("../images/flipped-hero-image.jpg");
         height: 600px;
         background-size: cover;
         background-position: center;
