--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@
     header {
         padding: 20px 35px;
         background-color: #39a6b2;
+        display: flex;
+        justify-content: space-between;
     }
 
     header h1 {
@@ -21,7 +23,6 @@
         font-size: 36px;
         color: #fce138;
         margin: 0;
-        display: inline;
     }
 
     header a {
@@ -30,7 +31,6 @@
     }
 
     header nav {
-        float: right;
         margin: 7px 0;
     }
 
