--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
         background-color: #39a6b2;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     header h1 {
@@ -31,8 +32,11 @@
     }
 
     header nav {
-        margin: 7px 0;
-    }
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;    }
 
     header nav ul li {
         display: inline;
@@ -41,7 +45,7 @@
     header nav ul li a {
         margin: 0 30px;
         font-weight: lighter;
-        font-size: 22px;
+        font-size: 1.55vw;
     }
     /* end styles to header */
 
