--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,10 +83,11 @@
     .section-title {
         font-size: 55px;
         color: #024e76;
-        margin-bottom: 35px;
-        padding: 0 100px 20px 100px;
-        display: inline-block;
         border-bottom: 3px solid;
+        padding-bottom: 20px;
+        text-align: center;
+        margin: 0 auto 35px auto;
+        width: 50%;
     }
     
     .primary-border {
@@ -165,21 +166,18 @@
     /* hero styles end */
 
     /* start what we do section */
-    .intro {
-        text-align: center;
-    }
     .intro p {
         line-height: 1.7;
         color: #39a6b2;
         width: 80%;
         font-size: 20px;
         margin: 0 auto;
+        text-align: center;
     }
     /* end what we do section */
 
     /* start what you do section */
     .steps {
-        text-align: center;
         background: #fce138;
     }
 
@@ -210,7 +208,6 @@
 
     /* start trainers section */
     .trainers {
-        text-align: center;
     }
     
     .trainer {
@@ -260,7 +257,6 @@
     /* start reach out section */
     .contact {
         background: #024e76;
-        text-align: center;
     }
 
     .contact h2 {
@@ -298,3 +294,7 @@
         color: #fce138;
     }
     /* end reach out section */
+
+    .flex-row {
+        display: flex;
+    }
