--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@
     }
 
     header nav ul li a {
-        margin: 0 30px;
+        padding: 10px 15px;
         font-weight: lighter;
         font-size: 1.55vw;
     }
@@ -81,7 +81,7 @@
     }
     
     .section-title {
-        font-size: 55px;
+        font-size: 48px;
         color: #024e76;
         border-bottom: 3px solid;
         padding-bottom: 20px;
@@ -107,6 +107,7 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        align-items: flex-start
     }
 
     .hero-cta {
@@ -115,7 +116,7 @@
         margin: 3.5%;
         color: #fff;
         font-size: 18px;
-        line-height: 1.3;
+        line-height: 1.2;
       }
 
       .hero-cta h2 {
@@ -348,3 +349,18 @@
     .flex-row {
         display: flex;
     }
+
+    /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+
+}
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+
+}
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+
+}
