--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,15 +353,29 @@
     /* start grid container */
     .service-grid-container {
       display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 100px);
+      grid-gap: 10px;
     }
 
     .service-grid-item {
-      width: 200px;
-      height: 50px;
       background-color: orange;
       border: solid;
+      padding: 1em;
       color: black;
     }
+
+    .box1 {
+      grid-column: 1/2; 
+      grid-row: 1/3; 
+    }
+
+    .box2 {
+      grid-column: 3/4; 
+      grid-row: 1/-1; 
+    }
+
+    
 
     /* end grid container */
 
