--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,28 +351,56 @@
     }
 
     /* start grid container */
+    /* SERVICE STYLES BEGIN */
+    .services {
+      background: #fce138; 
+    }
+
+    .service-grid-wrapper {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+    }
     .service-grid-container {
+      background: lightyellow;
+      width: 80%;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 100px);
-      grid-gap: 10px;
+      /* repeat(iterator, size) */
+      grid-template-columns: 1fr repeat(2, 4fr);
+      grid-template-rows: repeat(5, 1fr) 2fr;
+      border: 2px solid #024e76;
+      color:  #024e76;
+      font-size: 1.2rem;
     }
 
     .service-grid-item {
-      background-color: orange;
-      border: solid;
-      padding: 1em;
-      color: black;
+      padding: 15px 0;
+      border: 2px solid #024e76;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;      
     }
 
-    .box1 {
-      grid-column: 1/2; 
-      grid-row: 1/3; 
+    /* specific match */
+    .service-grid-item.basic {
+      grid-column: 2 / span 1;
     }
 
-    .box2 {
-      grid-column: 3/4; 
-      grid-row: 1/-1; 
+    .service-grid-item.both {
+      grid-column: 2 / span 2;
+    }
+
+    .service-grid-item.cancel {
+      writing-mode: vertical-lr;
+      grid-column: 1;
+      grid-row: 1 / -1;
+      transform: rotate(180deg)
+    }
+
+    .grid-head, .grid-price, .service-grid-item.cancel {
+      font-size: 1.5rem;
+      font-weight: bold;
     }
 
     
