modified media query for smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,6 +486,25 @@
       .step-text {
         flex: 100%;  
       }
+
+      .service-grid-container {
+        grid-template-columns: 1fr 1fr;
+      }
+    
+      .service-grid-item.basic {
+        grid-column: 1;
+      }
+    
+      .service-grid-item.both {
+        grid-column: 1 / -1;
+      }
+    
+      .service-grid-item.cancel {
+        transform: none;
+        writing-mode: unset;
+        grid-column: 1 / -1;
+        grid-row: -1;
+      }
     
 }
   
