made header sticky

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,14 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;   
+        background-image: url("../images/flipped-hero-image.jpg");
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        background-position: 80%;
     }
 
     header h1 {
@@ -24,6 +32,7 @@
         font-size: 36px;
         color: #fce138;
         margin: 0;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 
     header a {
@@ -46,6 +55,7 @@
         padding: 10px 15px;
         font-weight: lighter;
         font-size: 1.55vw;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
     /* end styles to header */
 
@@ -107,7 +117,9 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        align-items: flex-start
+        align-items: flex-start;
+        background-attachment: fixed;
+        background-position: 80%;
     }
 
     .hero-cta {
@@ -123,15 +135,18 @@
         font-style: italic;
         font-size: 55px;
         color: #fce138;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       }
 
     .hero-form {
         border: solid 3px #024e76;
-        background-color: #fce138;
+        background-color:  rgba(252, 225, 56, 0.8);
         padding: 20px;
         color: #024e76;
         width: 40%;
         margin: 3.5%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        border-radius: 15px;
     }
 
     .hero-form h3 {
@@ -151,6 +166,7 @@
         color: #024e76;
         width: 100%;
         margin-bottom: 15px;
+        border-radius: 10px;
     }
 
     .hero-form label {
@@ -163,6 +179,7 @@
         border: none;
         padding: 10px 20px;
         font-size: 16px;
+        border-radius: 10px;
     }
     /* hero styles end */
 
@@ -329,6 +346,7 @@
         width: 100%;
         margin-bottom: 15px;
         margin-top: 5px;
+        border-radius: 10px;
     }
 
     .contact-form button {
@@ -339,6 +357,7 @@
         text-align: center;
         padding: 15px 0;
         font-size: 16px;
+        border-radius: 10px;
     }
 
     .contact-info a {
