rounded text entry boxes, changed bottom border

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,10 +163,15 @@
         display: block;
         padding: 7px 15px;
         font-size: 16px;
-        color: #024e76;
-        width: 100%;
+        background-color: rgba(255,255,255, 0.75);
+         width: 100%;
         margin-bottom: 15px;
         border-radius: 10px;
+    }
+
+      .form-input:focus {
+        background-color: rgba(255,255,255, 1);
+        outline: none;
     }
 
     .hero-form label {
@@ -180,6 +185,10 @@
         padding: 10px 20px;
         font-size: 16px;
         border-radius: 10px;
+    }
+
+    .hero-form button:hover {
+      background-color: #39a6b2;  
     }
     /* hero styles end */
 
@@ -203,11 +212,14 @@
         margin: 50px auto;
         padding-bottom: 50px;
         width: 80%;
-        border-bottom: 1px solid #39a6b2;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
+      }
+
+      .step:not(:last-child) {
+        border-bottom: 1px solid #39a6b2;
       }
 
     .step h3 {
@@ -342,11 +354,16 @@
         display: block;
         padding: 7px 15px;
         font-size: 16px;
-        color: #024e76;
+        background-color: rgba(255,255,255, 0.75);
         width: 100%;
         margin-bottom: 15px;
         margin-top: 5px;
         border-radius: 10px;
+    }
+
+    .contact-form input:focus, .contact-form textarea:focus {
+        background-color: rgba(255,255,255, 1);
+        outline: none;
     }
 
     .contact-form button {
@@ -358,6 +375,11 @@
         padding: 15px 0;
         font-size: 16px;
         border-radius: 10px;
+    }
+
+    .contact-form button:hover {
+      color: #fce138;
+      background: #39a6b2;
     }
 
     .contact-info a {
@@ -435,6 +457,7 @@
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
       }
     
       header h1 {
@@ -450,6 +473,13 @@
     
       header nav ul li a {
         font-size: 20px;
+      }
+
+      header nav ul li a:hover {
+        background: #fce138;
+        color: #024e76;
+        border-radius: 15px;
+        text-shadow: none;
       }
     
       footer h2, footer div {
