--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,22 @@
         box-sizing: border-box;
     }
     
+    :root {
+      --primary-color: #fce138;
+      --secondary-color: #024e76;
+      --tertiary-color: #39a6b2;
+    }
+
     body {
     /* more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, Sans-serif;
     }
 
     /* start styles to header */
     header {
         padding: 20px 35px;
-        background-color: #39a6b2;
+        background-color: var(--tertiary-color);
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -31,14 +37,14 @@
     header h1 {
         font-weight: bold;
         font-size: 36px;
-        color: #fce138;
+        color: var(--primary-color);
         margin: 0;
         text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 
     header a {
         text-decoration: none;
-        color: #fce138;
+        color: var(--primary-color);
     }
 
     header nav {
@@ -62,7 +68,7 @@
 
     /* start styles to footer */
     footer {
-        background: #fce138;
+        background: var(--primary-color);
         width: 100%;
         padding: 40px 35px;
         display: flex;
@@ -71,7 +77,7 @@
     }
 
     footer h2 {
-        color: #024e76;
+        color: var(--secondary-color);
         font-size: 30px;
         margin: 0;
     }
@@ -82,7 +88,7 @@
     }
 
     footer a {
-        color: #024e76;
+        color: var(--secondary-color);
     }
     /* end styles to footer */
 
@@ -93,7 +99,7 @@
     
     .section-title {
         font-size: 48px;
-        color: #024e76;
+        color: var(--secondary-color);
         border-bottom: 3px solid;
         padding-bottom: 20px;
         text-align: center;
@@ -102,11 +108,11 @@
     }
     
     .primary-border {
-        border-color: #fce138;
+        border-color: var(--primary-color);
     }
 
     .secondary-border {
-        border-color: #39a6b2;
+        border-color: var(--tertiary-color);
     }
     /* end styles to section */
 
@@ -135,15 +141,15 @@
       .hero-cta h2 {
         font-style: italic;
         font-size: 55px;
-        color: #fce138;
+        color: var(--primary-color);
         text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       }
 
     .hero-form {
-        border: solid 3px #024e76;
+        border: solid 3px var(--secondary-color);
         background-color:  rgba(252, 225, 56, 0.8);
         padding: 20px;
-        color: #024e76;
+        color: var(--secondary-color);
         width: 40%;
         margin: 3.5%;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -160,7 +166,7 @@
     }
     
     .form-input {
-        border: 1px solid #024e76;
+        border: 1px solid var(--secondary-color);
         display: block;
         padding: 7px 15px;
         font-size: 16px;
@@ -180,8 +186,8 @@
     }
 
     .hero-form button {
-        color: #fce138;
-        background-color: #024e76;
+        color: var(--primary-color);
+        background-color: var(--secondary-color);
         border: none;
         padding: 10px 20px;
         font-size: 16px;
@@ -189,7 +195,7 @@
     }
 
     .hero-form button:hover {
-      background-color: #39a6b2;  
+      background-color: var(--tertiary-color);  
     }
 
     .checkbox-wrapper input, .radio-wrapper input {
@@ -208,7 +214,7 @@
       height: 20px;
       width: 20px;
       background: rgba(255, 255, 255, 0.75);  
-      border: 1px solid #024e76;  
+      border: 1px solid var(--secondary-color);  
       position: absolute;
       top: -4px;
       left: -30px;
@@ -223,7 +229,7 @@
       width: 20px;
       height: 20px;
       border-radius: 50%;
-      background: #024e76;
+      background: var(--secondary-color);
       position: absolute;
       left: -29px;
       top: -3px;
@@ -233,13 +239,13 @@
       content: "";
       height: 6px;
       width: 14px;
-      border-left: 2px solid #024e76;
-      border-bottom: 2px solid #024e76;
+      border-left: 2px solid var(--secondary-color);
+      border-bottom: 2px solid var(--secondary-color);
       position: absolute;
       left: -26px;
       top: 1px;
       transform: rotate(-58deg);
-      background-image: radial-gradient(circle, #39a6b2, #024e76);
+      background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
     }
 
     .checkbox-wrapper input + label::after, .radio-wrapper input + label::after {
@@ -255,7 +261,7 @@
     /* start what we do section */
     .intro p {
         line-height: 1.7;
-        color: #39a6b2;
+        color: var(--tertiary-color);
         width: 80%;
         font-size: 20px;
         margin: 0 auto;
@@ -265,7 +271,7 @@
 
     /* start what you do section */
     .steps {
-        background: #fce138;
+        background: var(--primary-color);
     }
 
     .step {
@@ -279,11 +285,11 @@
       }
 
       .step:not(:last-child) {
-        border-bottom: 1px solid #39a6b2;
+        border-bottom: 1px solid var(--tertiary-color);
       }
 
     .step h3 {
-        color: #024e76;
+        color: var(--secondary-color);
         font-size: 46px;
         flex: 1 30%
     }
@@ -296,14 +302,14 @@
     }
 
     .step-text p {
-        color: #39a6b2;
+        color: var(--tertiary-color);
         font-size: 18px;
     }
 
     .step-text h4 {
         font-size: 26px;
         line-height: 1.5;
-        color: #024e76;
+        color: var(--secondary-color);
       }
 
     .step-img {
@@ -332,8 +338,8 @@
     
     .trainer {
         margin: 20px;
-        background: #024e76;
-        color: #fce138;
+        background: var(--secondary-color);
+        color: var(--primary-color);
         flex: 1;
     }
 
@@ -371,11 +377,11 @@
 
     /* start reach out section */
     .contact {
-        background: #024e76;
+        background: var(--secondary-color);
     }
 
     .contact h2 {
-        color: #fce138;
+        color: var(--primary-color);
         
     }
 
@@ -398,7 +404,7 @@
       }
 
     .contact-info h3 {
-        color: #fce138;
+        color: var(--primary-color);
         font-size: 32px;
     }
 
@@ -410,7 +416,7 @@
     }
 
     .contact-form input, .contact-form textarea {
-        border: 1px solid #024e76;
+        border: 1px solid var(--secondary-color);
         display: block;
         padding: 7px 15px;
         font-size: 16px;
@@ -429,8 +435,8 @@
     .contact-form button {
         width: 100%;
         border: none;
-        background: #fce138;
-        color: #024e76;
+        background: var(--primary-color);
+        color: var(--secondary-color);
         text-align: center;
         padding: 15px 0;
         font-size: 16px;
@@ -438,12 +444,12 @@
     }
 
     .contact-form button:hover {
-      color: #fce138;
-      background: #39a6b2;
+      color: var(--primary-color);
+      background: var(--tertiary-color);
     }
 
     .contact-info a {
-        color: #fce138;
+        color: var(--primary-color);
     }
     /* end reach out section */
 
@@ -454,7 +460,7 @@
     /* start grid container */
     /* SERVICE STYLES BEGIN */
     .services {
-      background: #fce138; 
+      background: var(--primary-color); 
     }
 
     .service-grid-wrapper {
@@ -469,14 +475,14 @@
       /* repeat(iterator, size) */
       grid-template-columns: 1fr repeat(2, 4fr);
       grid-template-rows: repeat(5, 1fr) 2fr;
-      border: 2px solid #024e76;
-      color:  #024e76;
+      border: 2px solid var(--secondary-color);
+      color:  var(--secondary-color);
       font-size: 1.2rem;
     }
 
     .service-grid-item {
       padding: 15px 0;
-      border: 2px solid #024e76;
+      border: 2px solid var(--secondary-color);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -536,8 +542,8 @@
       }
 
       header nav ul li a:hover {
-        background: #fce138;
-        color: #024e76;
+        background: var(--primary-color);
+        color: var(--secondary-color);
         border-radius: 15px;
         text-shadow: none;
       }
