--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,6 @@
         top: 0;   
         background-image: url("../images/flipped-hero-image.jpg");
         background-size: cover;
-        background-position: center;
         background-attachment: fixed;
         background-position: 80%;
         z-index: 9999;
@@ -47,7 +46,7 @@
         color: var(--primary-color);
     }
 
-    header nav {
+    header nav ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -343,50 +342,89 @@
         flex: 1;
     }
 
+    .trainer-bio {
+      padding: 25px;
+      line-height: 1.3;
+  }
+
+  .trainer-bio h3 {
+    font-size: 28px;
+    display: none;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 22px;
+    margin-bottom: 15px;
+    display: none;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+}
+
+.trainer-1 {
+  background-image: url("../images/trainer-1.jpg");
+}
+
+.trainer-2 {
+  background-image: url("../images/trainer-2.jpg");
+}
+
+.trainer-3 {
+  background-image: url("../images/trainer-3.jpg");
+}
+
+
     .trainer-img {
         width: 100%;
         min-height: 300px;
+        background-size: cover;
+        display: flex;
+        padding: 15px;
+        align-items: flex-end;
+        position: relative;
+        overflow: hidden;
     }
 
-    .trainer-1 {
-      background-image: url("../images/trainer-1.jpg")
+    .trainer:hover .trainer-img::after {
+      opacity: 1;
     }
 
-    .trainer-2 {
-      background-image: url("../images/trainer-2.jpg")
+    .trainer-img::after {
+      content: "";
+      height: 100%;
+      width: 100%;
+      background: linear-gradient(rgba(252, 225, 56, 0.3), var(--secondary-color));
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      transition: 0.5s;
     }
 
-    .trainer-3 {
-      background-image: url("../images/trainer-3.jpg")
+    .trainer-img h3 {
+      position: relative;
+      z-index: 1;
+      font-size: 28px;
+      margin-bottom: 5px;
+      top: 200px;
+      transition: 0.6s;
     }
 
-
-    .trainer-bio {
-        padding: 25px;
-        line-height: 1.3;
+    .trainer-img h4 {
+      position: relative;
+      z-index: 1;
+      font-size: 22px;
+      top: 200px;
+      transition: 0.6s;
+      transition-delay: .2s;
     }
 
-    .text-left {
-        text-align: left;
+    .trainer:hover .trainer-img h3 .trainer:hover .trainer-img h4 {
+      top: 0;
     }
 
-    .text-right {
-        text-align: right;
-    }
-
-    .trainer-bio h3 {
-        font-size: 28px;
-    }
-
-    .trainer-bio h4 {
-        font-weight: lighter;
-        font-size: 22px;
-        margin-bottom: 15px;
-    }
-
-    .trainer-bio p {
-        font-size: 17px;
-    }
     /* end trainers section */
 
     /* start reach out section */
